--- a/blosc-hs.cabal
+++ b/blosc-hs.cabal
@@ -54,7 +54,8 @@ library
   
   -- Other library packages from which modules are imported.
   build-depends:       base >=4 && < 5,
-                bytestring
+                bytestring,
+                vector >= 0.10.0 && < 0.11
   
   -- Directories containing source files.
   hs-source-dirs:      src
